--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="accent">#2EE7FF</color>
     <color name="accent_dark">#21A2B3</color>
     <color name="bg_detail">#3F51B5</color>
+    <color name="ic_option">#000</color>
 </resources>
